[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/WireRamp.gd" type="Script" id=1]
[ext_resource path="res://Textures/Ball_03/initialShadingGroup_Emissive - Red.png" type="Texture" id=2]
[ext_resource path="res://TestUtilities/Scripts/DebugOutputLabel.gd" type="Script" id=3]
[ext_resource path="res://Animations/test_curve.tres" type="Curve3D" id=4]
[ext_resource path="res://Textures/Ball_03/initialShadingGroup_Metallic.png" type="Texture" id=5]
[ext_resource path="res://Textures/Ball_03/initialShadingGroup_Base_Color.png" type="Texture" id=6]
[ext_resource path="res://Textures/Ball_03/initialShadingGroup_Normal.png" type="Texture" id=7]
[ext_resource path="res://Materials/pinball.tres" type="Material" id=8]

[sub_resource type="SphereMesh" id=1]
radial_segments = 16
rings = 16

[sub_resource type="SphereMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 6 )
metallic = 0.1
metallic_texture = ExtResource( 5 )
roughness = 0.26
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 4.0
emission_operator = 0
emission_on_uv2 = false
emission_texture = ExtResource( 2 )
normal_enabled = true
normal_scale = 4.5
normal_texture = ExtResource( 7 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.2, 0.2, 0.2 )

[node name="WireRamp" type="Path"]
curve = ExtResource( 4 )
script = ExtResource( 1 )

[node name="PathFollow" type="PathFollow" parent="."]
transform = Transform( 0.99989, 0, 0, 0, 1, 0, 0, 0, 0.999833, 0, 0, 0 )
rotation_mode = 4
loop = false

[node name="BallReplica" type="MeshInstance" parent="PathFollow"]
transform = Transform( 0.2, 0, 0, 7.45058e-09, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = ExtResource( 8 )

[node name="BombReplica" type="MeshInstance" parent="PathFollow"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="EntranceArea" type="Area" parent="."]
transform = Transform( -0.99982, 0, -0.0189356, 0, 1, 0, 0.0189356, 0, -0.99982, 0.0918428, 0.0216143, 0.284624 )
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="EntranceArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.2 )
shape = SubResource( 4 )

[node name="ExitArea" type="Area" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -3.9515, 0, -6.80152 )
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="ExitArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.2 )
shape = SubResource( 4 )

[node name="DebugLabel" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
